--- a/projects/storefront/src/app/login-page/login-page.component.html
+++ b/projects/storefront/src/app/login-page/login-page.component.html
@@ -55,6 +55,6 @@
   </form>
 
   <div class="register-link">
-    Don't have an account? <a routerLink="/register">Sign up</a>
+    Don't have an account? <a routerLink="../register">Sign up</a>
   </div>
 </div>
