--- a/projects/storefront/src/app/registration-page/registration-page.component.html
+++ b/projects/storefront/src/app/registration-page/registration-page.component.html
@@ -119,6 +119,6 @@
       </form>
 
       <div class="login-link">
-        Already have an account? <a [routerLink]="['/login']">Log In</a> <!-- Link to login page later -->
+        Already have an account? <a [routerLink]="['../login']">Log In</a> <!-- Use relative path -->
       </div>
     </div>
