--- a/projects/storefront/src/app/home/homepage/homepage.component.html
+++ b/projects/storefront/src/app/home/homepage/homepage.component.html
@@ -10,7 +10,7 @@
     <app-category-card
       *ngFor="let category of categories"
       [category]="category"
-      [storeSlug]="currentStoreSlug$ | async"
+      [storeSlug]="currentStoreSlug"
     ></app-category-card>
   </div>
   <!-- Add loading/error state handling later -->
@@ -23,10 +23,7 @@
     <app-product-card
       *ngFor="let product of products"
       [product]="product"
-      [storeSlug]="currentStoreSlug$ | async"
+      [storeSlug]="currentStoreSlug"
     ></app-product-card>
   </div>
 </section>
-
-<!-- Newsletter Signup - Note: Plan puts this in the footer, handled by app-footer -->
-<!-- Search Bar - Note: Plan puts this in the header, handled by app-header -->
