fix: Update breadcrumbs link to support dynamic store slugs and clean up SCSS comments for better clarity

--- a/projects/storefront/src/app/category/category-page/category-page.component.html
+++ b/projects/storefront/src/app/category/category-page/category-page.component.html
@@ -3,7 +3,7 @@
 
   <!-- Breadcrumbs -->
   <div class="breadcrumbs">
-    <a [routerLink]="['/']">Home</a> > <span>{{ category.name }}</span>
+    <a [routerLink]="[ (currentStoreSlug$ | async) ? '/' + (currentStoreSlug$ | async) : '/']">Home</a> > <span>{{ category.name }}</span>
   </div>
 
   <!-- Category Header -->
