Adding (empty) links to Instagram, Facebook, and Twitter, below the caption "Follow Us"

--- a/projects/storefront/src/app/core/components/footer/footer.component.html
+++ b/projects/storefront/src/app/core/components/footer/footer.component.html
@@ -22,10 +22,9 @@
     <div class="footer-section social-section">
       <h4>Follow Us</h4>
       <div class="social-links">
-        <a href="#" target="_blank" title="Facebook"><span class="icon-facebook"></span></a> <!-- Placeholder -->
-        <a href="#" target="_blank" title="Twitter"><span class="icon-twitter"></span></a>   <!-- Placeholder -->
-        <a href="#" target="_blank" title="Instagram"><span class="icon-instagram"></span></a> <!-- Placeholder -->
-        <!-- Add actual icons/images later -->
+        <h5><a href="#" target="_blank" title="Instagram">Instagram</a></h5>
+        <h5><a href="#" target="_blank" title="Facebook">Facebook</a></h5>
+        <h5><a href="#" target="_blank" title="Twitter">Twitter</a></h5>
       </div>
     </div>
   </div>
